@@ -1,7 +1,5 @@
 {% extends "admin/base_site.html" %}
 
-{% load markup %}
-
 {% block breadcrumbs %}
 <div class="breadcrumbs">
      <a href="../../../../">Hjem</a> &rsaquo;
@@ -18,5 +16,5 @@
 {% endblock %}
 
 {% block content %}
-{{mail.body|restructuredtext}}
+{{mail.body|safe}}
 {% endblock %}
