@@ -3,6 +3,7 @@
  * Improved selection of date of birth.
  * Added country field to member profiles.
  * Removed dependency of textile markup, now using pure html.
+ * Added option to send e-mails to users which have selected an option in a group.
 
 2.2.0
  * Added pyton library to sso api.
